# OpenVR-Networked-Devices

./: .gitignore  .gitmodules  AruCoTrackerDevice.h  AruCoVRDriver.h  CMakeLists.txt  FullBodyTrackMarkersDriver.vcxproj  FullBodyTrackMarkersDriver.vcxproj.filters  GlobalIncludes.h  NetworkController.h  NetworkTracker.cpp  NetworkTracker.h  NetworkTrackerReference.cpp  NetworkTrackerReference.h  OpenVRNetworkedDevices.sln  README.md  VRDriver.cpp  driver_fullbodymarker.cpp  ovrnd.proto  vcpkg.json
icons/: NetworkReference.psd  TrackedDevice.psd
ovr_networked_devices/: driver.vrdrivermanifest
src/: DriverFactory.cpp  DriverFactory.h  INetworkTrackedDevice.h  NetworkClient.cpp  NetworkClient.h  NetworkController.cpp  NetworkController.h  NetworkDevice.cpp  NetworkDevice.h  NetworkDeviceComponent.cpp  NetworkDeviceComponent.h  NetworkGenericDevice.cpp  NetworkGenericDevice.h  NetworkReferenceDevice.cpp  NetworkReferenceDevice.h  NetworkServer.cpp  NetworkServer.h  NetworkTrackedDevice.cpp  NetworkTrackedDevice.h  NetworkTracker.cpp  NetworkTracker.h  NetworkVRDriver.cpp  NetworkVRDriver.h  SocketServer.cpp  SocketServer.h  VRDriver.cpp  VRDriver.h  driver_factory.cpp  network.cpp  network.h
x64/Debug/: Sample-OVRND-Application.ilk
